# Cmake_started_master

./: README.md  demo_verify_git.txt
0_directly_run/: CMakeLists.txt  readme_0_direct.txt
1_libraries/0_create_libraries/: readme_0_create
1_libraries/1_link_libraries/: readme_1_link
1_libraries/1_link_libraries/0_STATIC_link/: CMakeLists.txt
1_libraries/1_link_libraries/1_SHARED_link/: CMakeLists.txt
1_link_libraries/: CMakeLists.txt
2_appendlist/: readme_2_appendlist
2_appendlist/0_appendset/: CMakeLists.txt
2_appendlist/1_remove/: CMakeLists.txt
2_appendlist/2_MacroDefinition/: CMakeLists.txt
2_appendlist/2_MacroDefinition/src/: main.cpp
